# PantheonRL

./: .gitattributes  .gitignore  .gitmodules  LICENSE  MANIFEST.in  OvercookedWebApp.md  README.md  adaptester.py  bctester.py  bctrainer.py  blockworldlearn.py  docs  index.html  liarlearn.py  liartest.py  modulartester.py  overcookedlearn.py  preset.py  pyproject.toml  rpslearn.py  rpstest.py  setup.py  tester.py  trainer.py
common/: __init__.py  agents.py  multenv.py
docs/: api.html  conf.py  genindex.html  index.html  py-modindex.html
docs/_autosummary/: pantheonrl.algos.adap.policies.AdapPolicyMult.rst  pantheonrl.algos.adap.policies.html  pantheonrl.algos.adap.util.get_unit_square.html  pantheonrl.algos.modular.html  (+55 more)
docs_build/: Makefile  conf.py
examples/: blockworld_render.py  custom_sarl.py  env_training.py  off_policy_env_training.py  overcookedtest.py  overcookedtraining.py  pettingzooex.py
liargym/: __init__.py  liar.py
overcooked_extension/: README.md  setup.py
overcookedgym/: OvercookedAdaptPartnerInstructions.md  OvercookedFlaskWebAppInstructions.md  __init__.py  overcooked.py
pantheonrl/: __init__.py
rpsgym/: __init__.py  rps.py
tests/: README.org  check_reproducibility.py  test_adap.py  test_bc.py  test_end_to_end.py  test_framestack.py  test_misc_agents.py  test_modular.py  test_overcooked.py  test_pettingzoo.py  test_sarl_reproducibility.py  test_sb3_reproducibility.py  test_trajsaver.py
website/: __init__.py  agents.py  constants.py  data_processing.py  db.py  env_selection.py  envs.py  login.py  schema.sql  trainer.py  welcome.py
(+331 files in other folders)
